--- a/ddp-workspace/projects/ddp-osteo/src/styles.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles.scss
@@ -11,6 +11,7 @@
 @import './styles/static-page.scss';
 @import './styles/family-history-thank-you.scss';
 @import './styles/variables.scss';
+@import './styles/family-history.scss';
 
 $custom-typography: mat-typography-config($font-family: 'Source Sans Pro');
 
