Disable buttons if the parent activity is read-only

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -24,6 +24,7 @@
     </div>
 
     <button *ngIf="block.allowMultiple" mat-flat
+            [disabled]="readonly"
             class="add-btn button button_primary"
             (click)="createChildInstance()">
         <img src="assets/shared/add-person.svg" class="icon" [alt]="block.addButtonText">
