--- a/ddp-workspace/projects/ddp-rarex/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_typography.scss
@@ -96,3 +96,13 @@ h6 {
     }
   }
 }
+
+.is-consent {
+  .ddp-content {
+    text-align: justify;
+  }
+}
+
+.PageContent-infobox {
+  text-align: justify;
+}
