--- a/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <app-rarex-activity
       [studyGuid]="studyGuid"
-      [activityGuid]="activityGuid"
+      [activityGuid]="instanceGuid"
       (submit)="onSubmit($event)"
     ></app-rarex-activity>
   </div>
