--- a/ddp-workspace/projects/ddp-rarex/src/app/components/top-bar/top-bar.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <nav class="top-bar__nav">
     <ul class="nav-list">
       <li *ngIf="isAuthenticated" class="nav-list__item">
-        <a [routerLink]="routes.Dashboard" class="SimpleButton" translate>
+        <a [routerLink]="dashboardUrl" class="SimpleButton" translate>
           Common.Navigation.Dashboard
         </a>
       </li>
