--- a/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.scss
@@ -12,6 +12,12 @@
 
 .title {
   margin: 2rem 0;
+
+  @media (max-width: 450px) {
+    margin: 1.2rem 0;
+
+    font-size: 1.5rem;
+  }
 }
 
 .participants-list {
@@ -42,6 +48,10 @@
     padding: 16px 24px;
 
     border-bottom: 1px solid #26355c;
+
+    @media (max-width: 768px) {
+      padding: 1.2rem;
+    }
   }
 
   &__name {
