Rare-X: Fix activity editing

--- a/ddp-workspace/projects/ddp-rarex/src/styles/_table.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_table.scss
@@ -51,6 +51,14 @@
   }
 }
 
+.dashboard {
+  .mat-row {
+    @media (max-width: 768px) {
+      padding: 0;
+    }
+  }
+}
+
 .dashboard-table {
   @media (max-width: 768px) {
     display: block;
