--- a/ddp-workspace/projects/ddp-rarex/src/app/components/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container dashboard">
   <div *ngIf="loading; else content" class="spinner-container">
     <mat-spinner></mat-spinner>
   </div>
@@ -6,6 +6,10 @@
 
 <ng-template #content>
   <app-notifications [messages]="messages"></app-notifications>
+
+  <h1 class="title">
+    {{ 'Dashboard.Title' | translate }}
+  </h1>
 
   <app-participant-activities
     [activities]="activities"
