--- a/ddp-workspace/projects/ddp-rarex/src/app/components/dashboard/dashboard.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/dashboard/dashboard.component.scss
@@ -9,3 +9,13 @@
   margin-top: 1.2rem;
   margin-bottom: 2.4rem;
 }
+
+.title {
+  margin: 2rem 0;
+
+  @media (max-width: 450px) {
+    margin: 1.2rem 0;
+
+    font-size: 1.5rem;
+  }
+}
