Rare-X: Code cleanup

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity-page/activity-page.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity-page/activity-page.component.html
@@ -11,12 +11,12 @@
   </div>
 
   <div class="rarex-activity-page__activity-container">
-    <app-rarex-activity
+    <app-activity
       *ngIf="isActivityShown && !isFetchingActivities"
       [studyGuid]="studyGuid"
       [activityGuid]="instanceGuid"
       [isReadonly]="isReadonly"
       (submit)="onSubmit($event)"
-    ></app-rarex-activity>
+    ></app-activity>
   </div>
 </div>
