--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
@@ -84,7 +84,7 @@
             <span>{{model.lastUpdatedText}}</span>
           </div>
 
-          <div *ngIf="isLoaded" class="activity__btn-section">
+          <div *ngIf="model" class="activity__btn-section">
             <div *ngIf="isStepped && !isFirstStep" class="activity__btn-section__left">
               <button
                 class="button button_medium button_primary"
