--- a/ddp-workspace/projects/ddp-rarex/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/footer/footer.component.html
@@ -7,14 +7,16 @@
           [routerLink]="link.routePath"
           class="nav-list__link"
           translate
-        >{{ link.translationKey }}</a>
+          >{{ link.translationKey }}</a
+        >
 
         <a
           *ngIf="link.external"
           [href]="link.routePath"
           class="nav-list__link"
           translate
-        >{{ link.translationKey }}</a>
+          >{{ link.translationKey }}</a
+        >
       </li>
     </ul>
   </nav>
