--- a/ddp-workspace/projects/ddp-rarex/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/footer/footer.component.scss
@@ -30,7 +30,8 @@
     line-height: 1.375rem;
     color: #ffffff;
 
-    &:hover, focus {
+    &:hover,
+    focus {
       opacity: 0.8;
     }
   }
