--- a/ddp-workspace/projects/ddp-rarex/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -442,8 +442,7 @@
   <ul class="list">
     <li
       *ngFor="
-        let item of 'Pages.PrivacyPolicy.InformationProtection.List'
-          | translate
+        let item of 'Pages.PrivacyPolicy.InformationProtection.List' | translate
       "
     >
       {{ item }}
