--- a/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/family-history.scss
@@ -39,21 +39,39 @@
     .PageContent-text + details {
         font-weight: 600;
         margin-top: 42px;
-        padding: 18px 0 18px 10px;
+        padding: 18px 0 18px 30px;
         border-width: 1px 0;
         border-style: solid;
         border-color: #D2D2D2;
 
-        summary {
+        > summary {
+            list-style-type: none;
             outline: none;
             cursor: pointer;
+            margin-left: -16px;
+        }
+
+        > summary::-webkit-details-marker {
+            display: none;
+        }
+
+        > summary::before {
+            content: '+';
+            font-size: 30px;
+            position: relative;
+            top: 4px;
+            left: -10px;
+        }
+
+        &[open] > summary::before {
+            display: inline-block;
+            transform: rotate(45deg);
         }
 
         > p {
             font-size: 1rem;
             line-height: 1.5rem;
             font-weight: 400;
-            margin-left: 16px;
 
             &:last-child {
                 margin-bottom: 0;
