Rare-X: Activity edit adjustments & code cleanup

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.scss
@@ -55,7 +55,8 @@
   }
 
   &__name {
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
   }
 
   &__expand-btn {
@@ -65,7 +66,7 @@
 
     &--rotate {
       mat-icon {
-        transform: rotate(180deg);
+        transform: rotateX(-180deg);
       }
     }
   }
