Rare-X: Style adjustments

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/workflow-progress/workflow-progress.component.scss
@@ -3,6 +3,9 @@
 .workflow-progress {
   width: 20rem;
 
+  margin-top: 11px;
+  margin-right: 2em;
+
   list-style: none;
   position: sticky;
   top: 2.4rem;
