DDP-5708 rgp: styling for required questions (#487)

--- a/ddp-workspace/projects/ddp-rgp/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-rgp/src/styles/_activity.scss
@@ -197,8 +197,12 @@
   }
 }
 
+.ddp-required-question-prompt:after {
+    content: ' *';
+}
+
 .ddp-helper {
-  display: none;
+  display: none !important;
 }
 
 .ddp-textarea {
