--- a/ddp-workspace/projects/ddp-mbc/src/styles.scss
+++ b/ddp-workspace/projects/ddp-mbc/src/styles.scss
@@ -244,6 +244,13 @@ a:focus {
     transition: background-color 0.3s ease;
 }
 
+.language-menu {
+  .mat-menu-content {
+    padding: 10px;
+  }
+}
+
+
 .CountButton {
     font-weight: 700;
     border: 2px solid mat-color($app-theme, 100);
