--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -1,8 +1,9 @@
 <div class="activity-block-container">
     <div *ngIf="block.title" [innerHTML]="block.title"></div>
 
-    <div *ngIf="childInstances?.length" class="cards-block">
-        <div *ngFor="let instance of childInstances; trackBy: getInstanceId" class="card">
+    <div *ngIf="childInstances?.length" class="child-instances">
+        <div *ngFor="let instance of childInstances; trackBy: getInstanceId"
+             class="instance" [ngClass]="isModal ? 'modal' : 'embedded'">
             <ng-container *ngIf="isModal; else embedded">
                 <ddp-modal-activity-block [instance]="instance"
                                           [readonly]="readonly"
@@ -17,7 +18,8 @@
                                              [readonly]="readonly"
                                              [validationRequested]="validationRequested"
                                              [studyGuid]="studyGuid"
-                                             (componentBusy)="embeddedComponentBusy.emit($event)">
+                                             (componentBusy)="embeddedComponentBusy.emit($event)"
+                                             (deletedActivity)="onDeleteChildInstance($event)">
                 </ddp-embedded-activity-block>
             </ng-template>
         </div>
