--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.scss
@@ -1,8 +1,8 @@
 $max-btn-font-size: 20px;
 $flexible-btn-font-size: 1.25rem;
 
-.cards-block {
-    .card {
+.child-instances {
+    .instance {
         margin-bottom: 24px;
     }
 }
