DDP-5815 fix alignment

--- a/ddp-workspace/projects/ddp-osteo/src/styles/activity.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/styles/activity.scss
@@ -339,7 +339,7 @@ select {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .42);
     border-radius: 0;
-    height: 2.65rem;
+    height: $nativeSelectHeight;
     transition: all .3s;
     font-family: inherit;
     cursor: pointer;
