DDP-5816 add isAllQuestionsCompleted getter

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/modalActivityBlock/modalActivityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/modalActivityBlock/modalActivityBlock.component.html
@@ -11,8 +11,8 @@
 
             <div *ngIf="instance.statusCode !== 'CREATED'"
                  class="modal-activity-block__success-message">
-                <mat-icon *ngIf="instance.numQuestionsAnswered === instance.numQuestions" inline>check_circle</mat-icon>
-                <span *ngIf="instance.numQuestionsAnswered !== instance.numQuestions; else completeBlock"
+                <mat-icon *ngIf="isAllQuestionsCompleted" inline>check_circle</mat-icon>
+                <span *ngIf="!isAllQuestionsCompleted; else completeBlock"
                       class="modal-activity-block__label"
                       [innerHTML]="'SDK.ModalActivityBlock.NumQuestionsAnswered'| translate: {
                       number: instance.numQuestionsAnswered
