Rare-X: Add confirmation modal for participant deletion

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/participants-list/participants-list.component.html
@@ -48,7 +48,7 @@
             <button
               mat-icon-button
               class="participant__delete-btn"
-              (click)="onDeleteClick(participant)"
+              (click)="$event.stopPropagation(); onDeleteClick(participant)"
             >
               <mat-icon>delete</mat-icon>
             </button>
