--- a/ddp-workspace/projects/ddp-rarex/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_buttons.scss
@@ -1,4 +1,5 @@
 @import '../app-theme.scss';
+@import './variables';
 
 .simple-button,
 .SimpleButton {
@@ -87,6 +88,16 @@
     &:not(:disabled):hover,
     &:not(:disabled):focus {
       background-color: darken(mat-color($app-theme, 350), 10%);
+      outline: none;
+    }
+  }
+
+  &_danger {
+    background-color: $color-tertiary-red;
+
+    &:not(:disabled):hover,
+    &:not(:disabled):focus {
+      background-color: darken($color-tertiary-red, 10%);
       outline: none;
     }
   }
