Rare-X: DDP-5998 UI changes

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
@@ -1,58 +1,19 @@
-@import "../../../app-theme.scss";
+@import '../../../app-theme.scss';
 
 .main-header {
   background-color: mat-color($app-theme, 100);
 
   &__container {
     display: flex;
-    align-items: center;
+    justify-content: flex-end;
 
-    height: 9.6rem;
-
-    padding: 1.2rem;
-
-    @media only screen and (max-width: 600px) {
-      height: auto;
-
-      flex-direction: column;
-    }
-  }
-
-  &__logo {
-    @media only screen and (max-width: 600px) {
-      margin-bottom: 0.5rem;
-    }
+    padding: 3.6rem 1.2rem 1.2rem 1.2rem;
 
     @media only screen and (max-width: 480px) {
-      margin-bottom: 0.25rem;
+      justify-content: center;
+
+      padding-top: 1.2rem;
     }
-  }
-
-  &__powered-by {
-    margin-left: auto;
-
-    @media only screen and (max-width: 600px) {
-      margin-left: 0;
-    }
-  }
-}
-
-.logo {
-  font-size: 80px;
-  text-decoration: none;
-  line-height: 1em;
-  color: #212021;
-
-  &:hover {
-    opacity: 0.9;
-  }
-
-  @media only screen and (max-width: 600px) {
-    font-size: 64px;
-  }
-
-  @media only screen and (max-width: 480px) {
-    font-size: 48px;
   }
 }
 
