--- a/ddp-workspace/projects/ddp-rarex/src/app/components/participant-deletion-dialog/participant-deletion-dialog.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/participant-deletion-dialog/participant-deletion-dialog.component.html
@@ -1,14 +1,16 @@
-<h1 class="title">{{ 'ParticipantDeletionDialog.Title' | translate }}</h1>
-
 <p>
   {{ 'ParticipantDeletionDialog.Text' | translate }}
 </p>
 
 <div class="controls">
-  <button class="button button_secondary button_medium" (click)="onNoClick()">
-    {{ 'Common.Buttons.No' | translate }}
+  <button class="button button_primary button_medium" (click)="onYesClick()">
+    {{ 'Common.Buttons.Delete' | translate }}
   </button>
-  <button class="button button_danger button_medium" (click)="onYesClick()">
-    {{ 'Common.Buttons.Yes' | translate }}
+
+  <button
+    class="button button_medium button_outline button_outline--secondary"
+    (click)="onNoClick()"
+  >
+    {{ 'Common.Buttons.Cancel' | translate }}
   </button>
 </div>
