--- a/ddp-workspace/projects/ddp-rarex/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_buttons.scss
@@ -3,34 +3,34 @@
 
 .simple-button,
 .SimpleButton {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    color: mat-color($app-theme, 450);
-    text-decoration: none;
-    font-size: 1.0625rem;
-    line-height: 1.375rem;
-    font-family: inherit;
-    white-space: nowrap;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: mat-color($app-theme, 450);
+  text-decoration: none;
+  font-size: 1.0625rem;
+  line-height: 1.375rem;
+  font-family: inherit;
+  white-space: nowrap;
 }
 
 .simple-button:hover,
 .SimpleButton:hover {
-    color: mat-color($app-theme, 650);
-    text-decoration: underline;
+  color: mat-color($app-theme, 650);
+  text-decoration: underline;
 }
 
 .simple-button:focus,
 .SimpleButton:focus {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .panel-opened {
   .simple-button,
   .SimpleButton {
-      font-size: 1.875rem;
-      line-height: 2.25rem;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -48,7 +48,7 @@
 
   border: none;
   cursor: pointer;
-  transition: background-color .2s ease;
+  transition: background-color 0.2s ease;
 
   &:disabled {
     opacity: 0.8;
@@ -99,6 +99,25 @@
     &:not(:disabled):focus {
       background-color: darken($color-tertiary-red, 10%);
       outline: none;
+    }
+  }
+
+  &_outline {
+    &--secondary {
+      background-color: #ffffff;
+      border: 2px solid $color-secondary-teal;
+
+      color: $color-secondary-teal;
+
+      outline: none;
+      transition: background-color 0.2s ease, color 0.2s ease;
+
+      &:not(:disabled):hover,
+      &:not(:disabled):focus {
+        background-color: $color-secondary-teal;
+
+        color: #ffffff;
+      }
     }
   }
 }
